--- a/vaultwarden/example.env
+++ b/vaultwarden/example.env
@@ -1,4 +1,4 @@
-HOSTNAME=vault
+TS_HOSTNAME=vault
 TAILNET=[fun-name].ts.net
 SIGNUPS_ALLOWED=true # Allows anyone on your tailnet to register. If using funnel to expose publicly, be sure to disable after making accounts.
 ADMIN_TOKEN=generateRandomStringPerDocumentation
