--- a/vaultwarden/compose.yml
+++ b/vaultwarden/compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: vaultwarden
     restart: always
     environment:
-      DOMAIN: https://${HOSTNAME}.${TAILNET} # required when using a reverse proxy; your domain; vaultwarden needs to know it's https to work properly with attachments
+      DOMAIN: https://${TS_HOSTNAME}.${TAILNET} # required when using a reverse proxy; your domain; vaultwarden needs to know it's https to work properly with attachments
       SIGNUPS_ALLOWED: ${SIGNUPS_ALLOWED}
 
       # Gmail configuration
@@ -29,7 +29,7 @@ services:
   ts-vaultwarden:
     image: tailscale/tailscale
     container_name: ts-vaultwarden
-    hostname: ${HOSTNAME}
+    hostname: ${TS_HOSTNAME}
     environment:
       - TS_AUTHKEY=${TS_AUTHKEY}
       - TS_STATE_DIR=/var/lib/tailscale
