--- a/ghost/example.env
+++ b/ghost/example.env
@@ -1,7 +1,8 @@
 DBPASS=enterARandomlyGeneratedString
 DBTABLE=useWebsiteSubDomain
 EMAILADDR=example@gmail.com
-GMAILPASS=generatedAppPassword
+EMAILPASS=generatedAppPassword
+SMTP=smtp.gmail.com
 URL=https://blog.example.com
 
 TUNNEL_TOKEN=extractTunnelTokenFromCloudflareTunnelSetupAndPasteHere
