--- a/ghost/compose.yml
+++ b/ghost/compose.yml
@@ -1,4 +1,3 @@
-version: "3.1"
 services:
   # this is the ghost container - nothing needs to be changed here if only running a single ghost instance
   ghost:
@@ -26,10 +25,10 @@ services:
       mail__transport: SMTP
       mail__options__service: SMTP
       mail__from: ${EMAILADDR}
-      mail__options__host: smtp.gmail.com
+      mail__options__host: ${SMTP}
       mail__options__port: 587
       mail__options__auth__user: ${EMAILADDR}
-      mail__options__auth__pass: ${GMAILPASS}
+      mail__options__auth__pass: ${EMAILPASS}
 
     volumes:
       - ./ghost:/var/lib/ghost/content
